--- a/admin.html
+++ b/admin.html
@@ -55,7 +55,7 @@
 
   <script>
     // 🔑 Укажите ваш РАБОЧИЙ URL из Apps Script (тот же, что и в booking.html)
-    const SCRIPT_URL = 'https://AKfycbyOVrANCaRCrVxWwF939xswoiXCsSAg0o9fOZs00HBXtZEqDHyYTEE4QfF1LyAcTuuENA/exec';
+    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyOVrANCaRCrVxWwF939xswoiXCsSAg0o9fOZs00HBXtZEqDHyYTEE4QfF1LyAcTuuENA/exec';
 
     async function loadBookings() {
       const pass = document.getElementById('admin-pass').value;
