--- a/booking.html
+++ b/booking.html
@@ -122,6 +122,49 @@
             margin: 1rem 0;
             font-size: 1.2rem;
         }
+		/* Блок одного дня — фиксированная высота контента */
+.day-block {
+    background: #fafafa;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+}
+
+.day-header {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 12px;
+    color: #1976d2;
+    text-align: center;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #e0e0e0;
+    flex-shrink: 0; /* Заголовок не сжимается */
+}
+
+/* Контейнер для слотов с прокруткой */
+.slots-scroll-container {
+    overflow-y: auto;
+    max-height: 300px; /* ~7 строк по 4 слота (при высоте ~40px на строку) */
+    flex-grow: 1;
+}
+
+/* Сетка слотов */
+.day-slots-grid {
+    display: grid;
+    gap: 8px;
+}
+@media (min-width: 900px) {
+    .day-slots-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media (max-width: 899px) {
+    .day-slots-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
     </style>
 </head>
 <body>
